fix ads on mobile

--- a/assets/static/style.css
+++ b/assets/static/style.css
@@ -104,6 +104,7 @@ div.page-header {
 div.news-header {
   text-align: left;
 	margin-left: 16px;
+	margin-right: 16px;
 }
 
 div.news-header-title {
